# locale-name-code-page

./: .editorconfig  Cargo.toml  LICENSE  README.md
assets/: .editorconfig  extract_to_json.py  generate_rust_cp_table.py  nls_info.html  nls_info.json
src/: cp_table_type.rs  lib.rs  locale_to_cp_map.rs
